# email-manager-2925

./: README.md  SECURITY.md  package-lock.json  package.json  vite.config.ts
src/: App.example.tsx  App.tsx  main.tsx  styled.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  imap_pool.rs  lib.rs  main.rs
src/components/: README.md
src/components/App/: AppInitializer.tsx  index.ts
src/components/Auth/: LoginForm.styles.ts  LoginForm.test.tsx  LoginForm.tsx  index.ts
src/components/Common/: AnimatedButton.tsx  GlassCard.tsx  LoadingSpinner.tsx  ResponsiveContainer.tsx  index.ts
src/components/Email/: EmailDetail.tsx  EmailItem.tsx  EmailList.tsx  README.md  index.ts
src/components/SubEmail/: CreateSubEmailButton.tsx  SubEmailList.tsx  index.ts  (+2 more)
src/contexts/: AuthContext.tsx  EmailContext.tsx  README.md  SubEmailContext.tsx
src/hooks/: README.md  index.ts  useAppLifecycle.ts  useAuth.ts  useAutoRefresh.ts  useBeforeUnload.ts  useResponsiveLayout.ts  useSubEmail.ts  useSubEmailGenerator.ts  useSystemTray.ts  useTauriWindowEvents.ts  useWindowManager.ts
src/services/: README.md  tauriCommands.test.ts  tauriCommands.ts
src/styles/: GlobalStyle.ts  theme.ts
src/test/: setup.test.ts  setup.ts
src/types/: app.types.ts  auth.types.ts  email.types.ts  index.ts  preferences.types.ts  subEmail.types.ts
src/utils/: README.md  emailForwardIdentifier.test.ts  emailForwardIdentifier.ts  emailValidator.test.ts  emailValidator.ts  errorHandler.example.ts  errorHandler.ts  suffixGenerator.test.ts  suffixGenerator.ts  windowManager.ts
