[package]
name = "email-manager-2925"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "email_manager_2925_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4"] }
async-imap = "0.9"
async-native-tls = "0.5"
async-std = { version = "1.13", features = ["attributes"] }
mailparse = "0.15"
# 加密相关依赖
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
keyring = "2.3"
machine-uid = "0.5"

[profile.release]
# 启用链接时优化
lto = true
# 优化代码大小和性能
opt-level = "z"
# 减少并行代码生成单元以提高优化效果
codegen-units = 1
# 启用strip以减小二进制大小
strip = true
# 启用panic立即中止以减小大小
panic = "abort"

